refactor: add contact docs in swagger
